--- a/index.html
+++ b/index.html
@@ -207,6 +207,8 @@
                 <ul class="slides">
 
                   <li class="list-unstyled">
+
+
                     <div class="col-md-4 wp4">
                       <div class="overlay-effect effects clearfix">
                         <div class="img">
@@ -225,7 +227,7 @@
                     <div class="col-md-4 wp4 delay-05s">
                       <div class="overlay-effect effects clearfix">
                         <div class="img">
-                          <img src="img/projects/GlobalCitizenLeaders.jpg" alt="Portfolio Item">
+                          <img src="img/projects/GlobalCitizenLeaders.jpg"  target="_blank" alt="Portfolio Item">
                           <div class="overlay">
                             <a href="#" class="expand"><i class="fa fa-search"></i><br>View More</a>
                             <a class="close-overlay hidden">x</a>
@@ -243,7 +245,7 @@
                     <div class="col-md-4 wp4 delay-1s">
                       <div class="overlay-effect effects clearfix">
                         <div class="img">
-                          <img src="img/projects/YouthBikeSummit.jpg" alt="Portfolio Item">
+                          <img src="img/projects/YouthBikeSummit.jpg" target="_blank"  alt="Portfolio Item">
                           <div class="overlay">
                             <a href="#" class="expand"><i class="fa fa-search"></i><br>View More</a>
                             <a class="close-overlay hidden">x</a>
@@ -265,7 +267,7 @@
                     <div class="col-md-4 wp4">
                       <div class="overlay-effect effects clearfix">
                         <div class="img">
-                          <img src="img/projects/MakeYourMark.jpg" alt="Portfolio Item">
+                          <img src="img/projects/MakeYourMark.jpg" target="_blank"  alt="Portfolio Item">
                           <div class="overlay">
                             <a href="#" class="expand"><i class="fa fa-search"></i><br>View More</a>
                             <a class="close-overlay hidden">x</a>
@@ -281,7 +283,7 @@
                     <div class="col-md-4 wp4 delay-05s">
                       <div class="overlay-effect effects clearfix">
                         <div class="img">
-                          <img src="img/projects/QueerUrbanGeographies.jpg" alt="Portfolio Item">
+                          <img src="img/projects/QueerUrbanGeographies.jpg" target="_blank"  alt="Portfolio Item">
                           <div class="overlay">
                             <a href="#" class="expand"><i class="fa fa-search"></i><br>View More</a>
                             <a class="close-overlay hidden">x</a>
@@ -300,7 +302,7 @@
                     <div class="col-md-4 wp4 delay-1s">
                       <div class="overlay-effect effects clearfix">
                         <div class="img">
-                          <img src="img/projects/LivingArtsCity.jpg" alt="Portfolio Item">
+                          <img src="img/projects/LivingArtsCity.jpg" target="_blank"  alt="Portfolio Item">
                           <div class="overlay">
                             <a href="#" class="expand"><i class="fa fa-search"></i><br>View More</a>
                             <a class="close-overlay hidden">x</a>
@@ -324,7 +326,7 @@
                     <div class="col-md-4 wp4">
                       <div class="overlay-effect effects clearfix">
                         <div class="img">
-                          <img src="img/projects/RecycleCity.jpg" alt="Portfolio Item">
+                          <img src="img/projects/RecycleCity.jpg"  target="_blank" alt="Portfolio Item">
                           <div class="overlay">
                             <a href="#" class="expand"><i class="fa fa-search"></i><br>View More</a>
                             <a class="close-overlay hidden">x</a>
@@ -341,7 +343,7 @@
                     <div class="col-md-4 wp4 delay-05s">
                       <div class="overlay-effect effects clearfix">
                         <div class="img">
-                          <img src="img/projects/DEEDColombia.jpg" alt="Portfolio Item">
+                          <img src="img/projects/DEEDColombia.jpg" target="_blank"  alt="Portfolio Item">
                           <div class="overlay">
                             <a href="#" class="expand"><i class="fa fa-search"></i><br>View More</a>
                             <a class="close-overlay hidden">x</a>
@@ -360,7 +362,7 @@
                     <div class="col-md-4 wp4 delay-1s">
                       <div class="overlay-effect effects clearfix">
                         <div class="img">
-                          <img src="img/projects/WorldBankHDLproject.jpg" alt="Portfolio Item">
+                          <img src="img/projects/WorldBankHDLproject.jpg"  target="_blank" alt="Portfolio Item">
                           <div class="overlay">
                             <a href="#" class="expand"><i class="fa fa-search"></i><br>View More</a>
                             <a class="close-overlay hidden">x</a>
