--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                             Facilitated visioning and innovation workshop sessions with artisans in partnership with Universidad Autónoma de Manizales
 
                                 <a href="http://deed.parsons.edu/?page_id=394" target="_blank">
-                         Wesbite
+                         Website
                         </a>
 
 
